<resources>
    <string name="app_name">Guess_2021_CS</string>
    <string name="ok">OK</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Here  is for Linear layout-->
    <string name="input_number_linearLayout">Please input a number</string>
    <string name="activity_box_objectSize">请输入物品大小</string>
    <string name="activity_box_length">长</string>
    <string name="activity_box_length_hint">请输入长</string>
    <string name="activity_box_width">宽</string>
    <string name="activity_box_width_hint">请输入宽</string>
    <string name="activity_box_height">高</string>
    <string name="activity_box_height_hint">请输入高</string>
    <string name="activity_box_confirm_button">确认</string>
    <string name="please_input_two_numbers">Please input two numbers(positive)</string>
    <string name="you_got_it">you got it !!</string>
    <string name="please_guess_a_bigger_number">please guess a bigger number</string>
    <string name="please_guess_a_smaller_number">please guess a smaller number</string>
    <string name="guess_message">Guess Message</string>
    <string name="guess_a_number">Guess a number</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="clear_all_data">clear all data</string>
</resources>